# haskell-language-conf

./: '  .gitignore  Makefile  README.md  circle.yml  default.conf.json  default.conf.json.conf  language-conf.cabal  package.yaml  stack.yaml
conffmt/: .gitrepo  README.md  conffmt.cabal  package.yaml  stack.yaml
src/Data/: Conf.hs
src/Data/Conf/: Aeson.hs  Internal.hs  PrettyPrint.hs  Types.hs
test/Data/: ConfSpec.hs
test/Data/Conf/: AesonSpec.hs
