name:           conffmt
version:        0.2.2.0
synopsis:       A .conf file formatter
description:     "conffmt" is a @.conf@ file formatter that serves as an example of @language-conf@ 
category:       Data
homepage:       https://github.com/beijaflor-io/haskell-language-conf#readme
bug-reports:    https://github.com/beijaflor-io/haskell-language-conf/issues
author:         Pedro Tacla Yamada
maintainer:     tacla.yamada@gmail.com
copyright:      Copyright (c) 2016 Pedro Tacla Yamada
license:        MIT
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/beijaflor-io/haskell-language-conf

executable conffmt
  main-is: ConfFmt.hs
  hs-source-dirs:
      bin
  build-depends:
      base
    , text
    , optparse-applicative
    , megaparsec
    , language-conf
    , pretty
  default-language: Haskell2010
